--- a/index.html
+++ b/index.html
@@ -149,14 +149,94 @@
                   <div class="card-service"></div>
                   </a>
                 </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="used-car-contenair">
+          <div id="used-car-content">
+            <h3>Le marché de l'occasion</h3>
+            <div id="used-car-grid">
+              <ul>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-used-car"></div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="testimony-contenair">
+          <div id="testimony_content">
+            <h3>Les témoignages</h3>
+            <div id="testimony-grid">
+              <ul>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
+                <li><a href="">
+                  <div class="card-testimony"></div>
+                  </a>
+                </li>
                 
               </ul>
             </div>
 
           </div>
-
         </div>
-        main
       </main>
 
       <footer id="footer-content">footer
