add element service-content to index.html

--- a/index.html
+++ b/index.html
@@ -113,41 +113,81 @@
           </div>
         </div>
         <div id="service-contenair">
-          <div id="service_content">
-            <h3>Le Garage</h3>
-            <div id="service-grid">
-              <ul>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+          <div id="service-content">
+            <h1>Le Garage</h1>
+            <div>
+              <ul id="service-grid">
+                <li id="service1">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="pneu.png" alt="Pneu et Amortisseur" />
+                    </a>
+                    <h6>Pneu et Amortisseur</h6>
+                    <p>Pneu<br>Amortisseur<br>Parallélisme</p>
+                  </div>
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service2">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="vidange.png" alt="Vidange et Révision" />
+                    </a>
+                    <h6>Vidange et Révision</h6>
+                    <p>Vidange<br>Révision<br>Freinage</p>
+                  </div> 
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service3">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="freinage.png" alt="Freinage" />
+                    </a>
+                    <h6>Freinage</h6>
+                    <p>Plaquette<br>Disque<br>Frein à main</p>
+                  </div>
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service4">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="distribution.png" alt="Distribution" />
+                    </a>
+                    <h6>Distribution</h6>
+                    <p>Kit distribution<br>Pompe à eau<br>Kit accessoire</p>
+                  </div>
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service5">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="batterie.png" alt="Batterie et Eclairage" />
+                    </a>
+                    <h6>Batterie et Eclairage</h6>
+                    <p>Batterie<br>Eclairage<br>Alternateur</p>
+                  </div>
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service6">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="climatisation.png" alt="Climatisation" />
+                    </a>
+                    <h6>Climatisation</h6>
+                    <p>Recharge<br>Entretien<br>Diagnostic</p>
+                  </div>
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service7">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="equipement.png" alt="Equipements" />
+                    </a>
+                    <h6>Equipements</h6>
+                    <p>Attelage<br>Porte-vélo<br>Porte-skis</p>
+                  </div>
                 </li>
-                <li><a href="">
-                  <div class="card-service"></div>
-                  </a>
+                <li id="service8">
+                  <div class="card-service">
+                    <a href="">
+                      <img src="devis.png" alt="Devis personnalisé" />
+                    </a>
+                    <h6>Devis personnalisé</h6>
+                    <p>Devis<br>Gratuit<br>Sur mesure</p>
+                  </div>
                 </li>
               </ul>
             </div>
