add id card-down-content in list id service-grid to index.html

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       <main id="main-content">
         <div id="carousel-contenair">
           <div id="carousel-scroll">
+            <img src="usedcar-wallpaper.png" alt="V.Parrot - Vente de voiture d'occasion" />
 
           </div>
         </div>
@@ -122,8 +123,10 @@
                     <a href="">
                       <img src="pneu.png" alt="Pneu et Amortisseur" />
                     </a>
-                    <h6>Pneu et Amortisseur</h6>
-                    <p>Pneu<br>Amortisseur<br>Parallélisme</p>
+                    <div class="card-down-content">
+                      <h6>Pneu Amortisseur</h6>
+                      <p>Pneu<br>Amortisseur<br>Parallélisme</p>
+                  </div>
                   </div>
                 </li>
                 <li id="service2">
@@ -131,8 +134,10 @@
                     <a href="">
                       <img src="vidange.png" alt="Vidange et Révision" />
                     </a>
-                    <h6>Vidange et Révision</h6>
-                    <p>Vidange<br>Révision<br>Freinage</p>
+                    <div class="card-down-content">
+                      <h6>Vidange Révision</h6>
+                      <p>Vidange<br>Révision<br>Freinage</p>
+                    </div>
                   </div> 
                 </li>
                 <li id="service3">
@@ -140,8 +145,10 @@
                     <a href="">
                       <img src="freinage.png" alt="Freinage" />
                     </a>
-                    <h6>Freinage</h6>
-                    <p>Plaquette<br>Disque<br>Frein à main</p>
+                    <div class="card-down-content">
+                      <h6>Freinage</h6>
+                      <p>Plaquette<br>Disque<br>Frein à main</p>
+                    </div>
                   </div>
                 </li>
                 <li id="service4">
@@ -149,8 +156,10 @@
                     <a href="">
                       <img src="distribution.png" alt="Distribution" />
                     </a>
-                    <h6>Distribution</h6>
-                    <p>Kit distribution<br>Pompe à eau<br>Kit accessoire</p>
+                    <div class="card-down-content">
+                      <h6>Distribution</h6>
+                      <p>Kit distribution<br>Pompe à eau<br>Kit accessoire</p>
+                    </div>
                   </div>
                 </li>
                 <li id="service5">
@@ -158,8 +167,10 @@
                     <a href="">
                       <img src="batterie.png" alt="Batterie et Eclairage" />
                     </a>
-                    <h6>Batterie et Eclairage</h6>
-                    <p>Batterie<br>Eclairage<br>Alternateur</p>
+                    <div class="card-down-content">
+                      <h6>Batterie Eclairage</h6>
+                      <p>Batterie<br>Eclairage<br>Alternateur</p>
+                    </div>
                   </div>
                 </li>
                 <li id="service6">
@@ -167,8 +178,10 @@
                     <a href="">
                       <img src="climatisation.png" alt="Climatisation" />
                     </a>
-                    <h6>Climatisation</h6>
-                    <p>Recharge<br>Entretien<br>Diagnostic</p>
+                    <div class="card-down-content">
+                      <h6>Climatisation</h6>
+                      <p>Recharge<br>Entretien<br>Diagnostic</p>
+                    </div>
                   </div>
                 </li>
                 <li id="service7">
@@ -176,8 +189,10 @@
                     <a href="">
                       <img src="equipement.png" alt="Equipements" />
                     </a>
-                    <h6>Equipements</h6>
-                    <p>Attelage<br>Porte-vélo<br>Porte-skis</p>
+                    <div class="card-down-content">
+                      <h6>Equipements</h6>
+                      <p>Attelage<br>Porte-vélo<br>Porte-skis</p>
+                    </div>
                   </div>
                 </li>
                 <li id="service8">
@@ -185,8 +200,10 @@
                     <a href="">
                       <img src="devis.png" alt="Devis personnalisé" />
                     </a>
-                    <h6>Devis personnalisé</h6>
-                    <p>Devis<br>Gratuit<br>Sur mesure</p>
+                    <div class="card-down-content">
+                      <h6>Devis personnalisé</h6>
+                      <p>Devis<br>Gratuit<br>Sur mesure</p>
+                    </div>
                   </div>
                 </li>
               </ul>
