add carousel-contenair in used-car-contenair and testimony-contenair to index.html

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       </header>
 
       <main id="main-content">
-        <div id="carousel-contenair">
-          <div id="carousel-scroll">
-            <img src="usedcar-wallpaper.png" alt="V.Parrot - Vente de voiture d'occasion" />
+        <div class="carousel-contenair">
+          <div class="carousel-scroll">
+            <img src="garage-service-01.png" alt="V.Parrot - Vente de voiture d'occasion" />
 
           </div>
         </div>
@@ -210,88 +210,40 @@
             </div>
           </div>
         </div>
-        <div id="used-car-contenair">
-          <div id="used-car-content">
+        <div  id="used-car-contenair">
+          <div  id="used-car-content">
             <h3>Le marché de l'occasion</h3>
-            <div id="used-car-grid">
-              <ul>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-used-car"></div>
-                  </a>
-                </li>
-              </ul>
+            <div class="carousel-contenair">
+              <div class="carousel-scroll">
+                <a id="scroll-left-usedcar"></a>
+                  <div class="card-content">
+                    <div class="card-usedcar" id="card1-usedcar"></div>
+                    <div class="card-usedcar" id="card2-usedcar"></div>
+                    <div class="card-usedcar" id="card3-usedcar"></div>
+                    <div class="card-usedcar" id="card4-usedcar"></div>
+                    <div class="card-usedcar" id="card5-usedcar"></div>
+                  </div>
+                <a class="scroll-right-usedcar"></a>
+              </div>
             </div>
           </div>
         </div>
         <div id="testimony-contenair">
           <div id="testimony_content">
             <h3>Les témoignages</h3>
-            <div id="testimony-grid">
-              <ul>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                <li><a href="">
-                  <div class="card-testimony"></div>
-                  </a>
-                </li>
-                
-              </ul>
+            <div class="carousel-contenair">
+              <div class="carousel-scroll">
+                <a id="scroll-left-testimony"></a>
+                  <div class="card-content">
+                    <div class="card-testimony" id="card1-testimony"></div>
+                    <div class="card-testimony" id="card2-testimony"></div>
+                    <div class="card-testimony" id="card3-testimony"></div>
+                    <div class="card-testimony" id="card4-testimony"></div>
+                    <div class="card-testimony" id="card5-testimony"></div>
+                  </div>
+                <a id="scroll-right-testimony"></a>
+              </div>
             </div>
-
           </div>
         </div>
       </main>
