change name image card usedcar in index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   <div class="card-content card-content-usedcar">
                     <div class="card-usedcar" id="card1-usedcar">
                       <div class="card-usedcar-content-img">
-                        <img src="Mazda RX7 600x400.png" alt="Mazda RX7" />
+                        <img src="Mazda-RX7.png" alt="Mazda RX7" />
                       </div>
                       <div class="card-usedcar-content-text">
                         <h6>Mazda RX7</h6>
@@ -241,7 +241,7 @@
                     </div>
                     <div class="card-usedcar" id="card2-usedcar">
                       <div class="card-usedcar-content-img">
-                        <img src="tesla-model3-600x400.png" alt="Tesla Model 3" />
+                        <img src="Tesla-Model-3.png" alt="Tesla Model 3" />
                       </div>
                       <div class="card-usedcar-content-text">
                         <h6>Tesla Model 3</h6>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="card-usedcar" id="card3-usedcar">
                       <div class="card-usedcar-content-img">
-                        <img src="volksvagen-touran.png" alt="Volksvagen Touran" />
+                        <img src="Volksvagen-Touran.png" alt="Volksvagen Touran" />
                       </div>
                       <div class="card-usedcar-content-text">
                         <h6>Volksvagen Touran</h6>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="card-usedcar" id="card4-usedcar">
                       <div class="card-usedcar-content-img">
-                        <img src="Dodge Challenger.png" alt="Dodge Challenger SRT 8" />
+                        <img src="Dodge-Challenger.png" alt="Dodge Challenger SRT 8" />
                       </div>
                       <div class="card-usedcar-content-text">
                         <h6>Dodge Challenger</h6>
@@ -274,7 +274,7 @@
                     </div>
                     <div class="card-usedcar" id="card5-usedcar">
                       <div class="card-usedcar-content-img">
-                        <img src="audi A3 sportback.png" alt="Audi A3 Sportback" />
+                        <img src="Audi-A3-Sportback.png" alt="Audi A3 Sportback" />
                       </div>
                       <div class="card-usedcar-content-text">
                         <h6>Audi A3 Sportback</h6>
