add <br> in <p> in id filter-content to usedcar.html

--- a/usedcar.html
+++ b/usedcar.html
@@ -126,10 +126,10 @@
                   <div id="filter-price">
                     <h5>Prix</h5>
                     <div class="double-input">
-                      <input type="range" min="5000" max="100000" value="0" class="slider" id="from-range-price" title="price">
-                      <input type="range" min="5000" max="100000" value="100000" class="slider" id="to-range-price" title="price">
+                      <input type="range" min="5000" max="80000" value="0" class="slider" id="from-range-price" title="price">
+                      <input type="range" min="5000" max="80000" value="80000" class="slider" id="to-range-price" title="price">
                     </div>
-                    <p><span id="from-price">0000000</span><span>€ - </span><span id="to-price">100000</span><span>€</span></p>
+                    <p class="mni-max-value"><span id="from-price">5000</span><span>€</span><br><span id="to-price">80000</span><span>€</span></p>
                   </div>
                   <div id="filter-year">
                     <h5>Année</h5>
@@ -137,15 +137,15 @@
                       <input type="range" min="2000" max="2023" value="2000" step="1" class="slider" id="from-range-year" title="year">
                       <input type="range" min="2000" max="2023" value="2023" step="1" class="slider" id="to-range-year" title="year">
                     </div>
-                    <p><span id="from-year">2000</span><span> - </span><span id="to-year">2023</span></p>
+                    <p class="min-max-value"><span id="from-year">2000</span><br><span id="to-year">2023</span></p>
                   </div>
                   <div id="filter-km">
                     <h5>Kilométrage</h5>
                     <div class="double-input">
-                      <input type="range" min="0" max="250000" value="0" step="1000" class="slider" id="from-range-km" title="km">
-                      <input type="range" min="0" max="250000" value="250000" step="1000" class="slider" id="to-range-km" title="km">
+                      <input type="range" min="0" max="150000" value="0" step="1000" class="slider" id="from-range-km" title="km">
+                      <input type="range" min="0" max="150000" value="150000" step="1000" class="slider" id="to-range-km" title="km">
                     </div>
-                    <p><span id="from-km">1</span><span>km - </span><span id="to-km">250000</span><span>km</span></p>
+                    <p class="min-max-value"><span id="from-km">1</span><span>km</span><br><span id="to-km">250000</span><span>km</span></p>
                   </div>
                 </div>
               </div>
